--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -1,16 +1,13 @@
 {% extends "base.html" %}
 {% load static %}
-
 {% block page_header %}
-<!--Main hea container -->
+<!--Main header container -->
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
     </div>
 </div>
-{% endblock %}
-
-{% block content %}
+{% endblock %} {% block content %}
 <!-- Overlay white background -->
 <div class="overlay"></div>
 <!-- Main Products Container -->
@@ -35,91 +32,90 @@
                 <div class="pricing" style="display: flex;">
                     <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
                     {% if is_product_in_favourites %}
-                        <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
+                    <a href="{% url 'remove_product_from_favourites' product.id 'product' %}" aria-label="remove product from favourites" class="favourite favourite-remove text-danger ml-3"><i class="fas fa-heart"></i></a>
                     {% else %}
                     <a href="{% url 'add_product_to_favourites' product.id %}" aria-label="add product to favourites" class="favourite text-danger ml-3"><i class="far fa-heart"></i></a>
                     {% endif %}
                 </div>
-        <!-- Main Products Details Container -->
-        <div class="col-12 col-md-6 col-lg-4">
-            <div class="product-details-container mb-5 mt-2">
-                {% if product.category %}
-                <p class="small mt-1 mb-0">
-                    <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }} </a>
-                </p>
-                {% endif %}
-                <!-- Products rating -->
-                {% if product.rating %}
-                <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
-                {% else %}
-                <small class="text-muted">No Rating</small>
-                {% endif %} 
-                
-                {% if request.user.is_superuser %}
-                <small class="ml-3">
-                    <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                    <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                </small>
-                {% endif %}
-                <!-- Products description -->
-                <p class="mt-3">{{ product.description }}</p>
-                <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
-                    {% csrf_token %}
-                    <div class="form-row">
-                        {% with product.has_sizes as s %} {% if s %}
-                        <div class="col-12">
-                            <p><strong>Size:</strong></p>
-                            <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
-                                <option value="xs">XS</option>
-                                <option value="s">S</option>
-                                <option value="m" selected>M</option>
-                                <option value="l">L</option>
-                                <option value="xl">XL</option>
-                            </select>
-                        </div>
+                <!-- Main Products Details Container -->
+                <div class="col-12 col-md-6 col-lg-4">
+                    <div class="product-details-container mb-5 mt-2">
+                        {% if product.category %}
+                        <p class="small mt-1 mb-0">
+                            <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}"> <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }} </a>
+                        </p>
                         {% endif %}
-                        <!-- Product quantity -->
-                        <div class="col-12">
-                            <p class="mt-3"><strong>Quantity:</strong></p>
-                            <div class="form-group w-50">
-                                <div class="input-group">
-                                    <div class="input-group-prepend">
-                                        <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-minus"></i>
-                                            </span>
-                                        </button>
-                                    </div>
-                                    <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" />
-                                    <div class="input-group-append">
-                                        <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
-                                            <span class="icon">
-                                                <i class="fas fa-plus"></i>
-                                            </span>
-                                        </button>
+                        <!-- Products rating -->
+                        {% if product.rating %}
+                        <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} / 5</small>
+                        {% else %}
+                        <small class="text-muted">No Rating</small>
+                        {% endif %} {% if request.user.is_superuser %}
+                        <small class="ml-3">
+                            <a href="{% url 'edit_product' product.id %}">Edit</a> |
+                            <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
+                        </small>
+                        {% endif %}
+                        <!-- Products description -->
+                        <p class="mt-3">{{ product.description }}</p>
+                        <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
+                            {% csrf_token %}
+                            <div class="form-row">
+                                {% with product.has_sizes as s %} {% if s %}
+                                <div class="col-12">
+                                    <p><strong>Size:</strong></p>
+                                    <select class="form-control rounded-0 w-50" name="product_size" id="id_product_size">
+                                        <option value="xs">XS</option>
+                                        <option value="s">S</option>
+                                        <option value="m" selected>M</option>
+                                        <option value="l">L</option>
+                                        <option value="xl">XL</option>
+                                    </select>
+                                </div>
+                                {% endif %}
+                                <!-- Product quantity -->
+                                <div class="col-12">
+                                    <p class="mt-3"><strong>Quantity:</strong></p>
+                                    <div class="form-group w-50">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-minus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control qty_input" type="number" name="quantity" value="1" min="1" max="99" data-item_id="{{ product.id }}" id="id_qty_{{ product.id }}" />
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-black rounded-0" data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                                    <span class="icon">
+                                                        <i class="fas fa-plus"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                                <div class="col{% if s %}-12 mt-2{% endif %}">
+                                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
+                                        <span class="icon">
+                                            <i class="fas fa-chevron-left"></i>
+                                        </span>
+                                        <span class="text-uppercase">Keep Shopping</span>
+                                    </a>
+                                    <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5" value="Add to Bag" />
+                                </div>
+                                <input type="hidden" name="redirect_url" value="{{ request.path }}" />
+                                {% endwith %}
                             </div>
-                        </div>
-                        <div class="col{% if s %}-12 mt-2{% endif %}">
-                            <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
-                                <span class="icon">
-                                    <i class="fas fa-chevron-left"></i>
-                                </span>
-                                <span class="text-uppercase">Keep Shopping</span>
-                            </a>
-                            <input type="submit" class="btn btn-success rounded-0 text-uppercase mt-5" value="Add to Bag" />
-                        </div>
-                        <input type="hidden" name="redirect_url" value="{{ request.path }}" />
-                        {% endwith %}
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
+        {% endblock %}
     </div>
 </div>
-{% endblock %}
-
 
 <!-- Postload Javascript -->
 {% block postloadjs %}
