--- a/templates/base.html
+++ b/templates/base.html
@@ -13,7 +13,7 @@
 
         {% block corecss %}
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-        <link rel="stylesheet" href="{% static 'css/base.css' %}" type="text/css" />
+        <link rel="stylesheet" href="{% static 'css/base.css' %}" />
         <link rel="icon" href="{% static 'favicon.ico' %}" />
         {% endblock %}
         {% block extra_css %}
