--- a/templates/allauth/account/signup.html
+++ b/templates/allauth/account/signup.html
@@ -9,7 +9,7 @@
 <h2 class="logo-font">{% trans "Sign Up" %}</h2>
 <hr>
 
-<p classs="mt-5">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+<p class="mt-5">{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
 <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
   {% csrf_token %}
