--- a/staticfiles/css/base.css
+++ b/staticfiles/css/base.css
@@ -19,6 +19,16 @@ body {
     width: 1.5rem;
 }
 
+/* WAVE Accessibily */
+.sr-only{
+    position:absolute;
+    left:-10000px;
+    top:auto;
+    width:1px;
+    height:1px;
+    overflow:hidden;
+ }
+
 .bg-blue-yonder {
     background-color: #4470AD !important;
 }
