--- a/templates/base.html
+++ b/templates/base.html
@@ -45,9 +45,10 @@
                 <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
                     <form method="GET" action="{% url 'products' %}">
                         <div class="input-group w-100">
-                            <input class="form-control border border-black rounded-0" type="text" name="q" placeholder="Search our site" />
+                            <label for="siteSearch" class="sr-only">Search</label>
+                            <input class="form-control border border-black rounded-0" id="siteSearch" type="text" name="q" placeholder="Search our site" />
                             <div class="input-group-append">
-                                <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+                                <button class="form-control btn btn-black border border-black rounded-0" aria-label="submit" type="submit">
                                     <span class="icon">
                                         <i class="fas fa-search"></i>
                                     </span>
