--- a/home/static/home/css/carousel.css
+++ b/home/static/home/css/carousel.css
@@ -53,10 +53,11 @@
     left: 15px;
   }
   
+  /* Style carousel left and right buttons */
   .buttons button {
-    border: 2px solid #fff;
+    border: 2px solid black;
     background-color: transparent;
-    color: #fff;
+    color: black;
     cursor: pointer;
     padding: 13px 15px;
     border-radius: 50%;
