--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -62,8 +62,8 @@
     </div>
   </div>
   <div class="buttons">
-    <button id="prev"><i class="fas fa-arrow-left" aria-label="arrow-left"></i></i></button>
-    <button id="next"><i class="fas fa-arrow-right" aria-label="arrow-right"></i></i></button>
+    <button id="prev" class="sr-only" aria-label="arrow-left"><i class="fas fa-arrow-left"></i></i></button>
+    <button id="next" class="sr-only" aria-label="arrow-right"><i class="fas fa-arrow-right" ></i></i></button>
   </div>
 
 {% endblock %}
