--- a/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
+++ b/products/templates/products/custom_widget_templates/custom_clearable_file_input.html
@@ -12,7 +12,7 @@
 {% endif %}<br>
 {{ widget.input_text }}
 {% endif %}
-<span class="btn btn-black rounded-0 btn-file">
-Select Image <input type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
+<span class="btn black-btn rounded-0 btn-file">
+    <label for="new-image" hidden>Image label</label>
+    Select Image <input id="new-image" type="{{ widget.type }}" name="{{ widget.name }}"{% include "django/forms/widgets/attrs.html" %}>
 </span>
-<p class="fw-bold text-danger" id="filename"></p>
