--- a/static/css/base.css
+++ b/static/css/base.css
@@ -253,7 +253,7 @@ a.category-badge > span.badge:hover {
   }
 
   .allauth-form-inner-content a {
-      color: #17a2b8; /* text-info */
+      color: #0C6064; /* text-info */
   }
 
  /* Product Form */
