--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -83,7 +83,10 @@
                 {% csrf_token %}
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
-                    {{ order_form.full_name | as_crispy_field }} {{ order_form.email | as_crispy_field }}
+                    <label for="id_full_name" hidden>Full Name</label>
+                    {{ order_form.full_name | as_crispy_field }} 
+                    <label for="id_email" hidden>Email</label>
+                    {{ order_form.email | as_crispy_field }}
                 </fieldset>
                 <fieldset class="rounded px-3 mb-5">
                     <legend class="fieldset-label small text-black px-2 w-auto">Delivery</legend>
