--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -13,7 +13,7 @@
         <div class="col"></div>
     </div>
 </div>
-% endblock %}
+{% endblock %}
 
 {% block content %}
 <!-- Overlay white background -->
