--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -26,6 +26,12 @@
         <div class="col-12 col-lg-6">
             <p class="text-muted">Default Delivery Information</p>
             <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
+                <label for="id_default_phone_number" hidden>Phone Number</label>
+                <label for="id_default_street_address1" hidden>Street Address 1</label>
+                <label for="id_default_street_address2" hidden>Street Address 2</label>
+                <label for="id_default_town_or_city" hidden>Town Or City</label>
+                <label for="id_default_county" hidden>County</label>
+                <label for="id_default_postcode" hidden>Post Code</label>
                 {% csrf_token %} {{ form|crispy }}
                 <button class="btn btn-black rounded-1 text-uppercase float-right">Update Information</button>
             </form>
