--- a/blog/templates/blog/blog.html
+++ b/blog/templates/blog/blog.html
@@ -34,7 +34,7 @@
                     <!-- Edit and Delete Buttons -->
                     {% if user.is_authenticated %} {% if user.id == post.author.id %}
                     <div class="ml-3 mb-2 text-center">
-                        <a class="text-info text-decoration-none" href="{% url 'update_blog' post.pk %}">Edit</a> |
+                        <a class="text-secondary text-decoration-none" href="{% url 'update_blog' post.pk %}">Edit</a> |
                         <a class="text-danger text-decoration-none" data-toggle="modal" data-target="#modal-overlay" href="{% url 'delete_blog' post.pk %}">Delete</a>
                     </div>
                     <!-- Card footer displaying blog post date -->
