--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -32,6 +32,7 @@
                     <thead class="text-black">
                         <tr>
                             <th scope="col">Product Info</th>
+                            <th scope="col">Product Title</th>
                             <th scope="col">Price</th>
                             <th scope="col">Qty</th>
                             <th scope="col">Subtotal</th>
